Reduce the log level of frequently occuring DVLOGs

This changes the most verbose log statements in Mojo
from DVLOG(2) to DVLOG(4) (see bug for counts).
This should make DVLOG(3) statements useful again.

BUG=644088

Review-Url: https://codereview.chromium.org/2315483002
Cr-Commit-Position: refs/heads/master@{#416667}

Former-commit-id: 080b6919d7c585a8d407255c8cb40efdc39eaf9e