mojo/edk/system/ports/node.cc
@@ -272,7 +272,7 @@ int Node::GetMessageIf(const PortRef& port_ref,
                        ScopedMessage* message) {
   *message = nullptr;
 
-  DVLOG(2) << "GetMessageIf for " << port_ref.name() << "@" << name_;
+  DVLOG(4) << "GetMessageIf for " << port_ref.name() << "@" << name_;
 
   Port* port = port_ref.port();
   {
@@ -428,7 +428,7 @@ int Node::OnUserMessage(ScopedMessage message) {
     ports_buf << message->ports()[i];
   }
 
-  DVLOG(2) << "AcceptMessage " << event->sequence_num
+  DVLOG(4) << "AcceptMessage " << event->sequence_num
              << " [ports=" << ports_buf.str() << "] at "
              << port_name << "@" << name_;
 #endif
@@ -1078,7 +1078,7 @@ int Node::WillSendMessage_Locked(const LockedPort& port,
   }
 
 #if DCHECK_IS_ON()
-  DVLOG(2) << "Sending message "
+  DVLOG(4) << "Sending message "
            << GetEventData<UserEventData>(*message)->sequence_num
            << " [ports=" << ports_buf.str() << "]"
            << " from " << port_name << "@" << name_
